--- a/cv-website/src/css/HomePage.css
+++ b/cv-website/src/css/HomePage.css
@@ -3,3 +3,8 @@
 .home-formatting-div {
     background: radial-gradient(600px at 1187px 527px, rgba(29, 78, 216, 0.15), transparent 80%);
 }
+
+.columnar-formatting {
+    padding-left: 3rem;
+    padding-right: 3rem;
+}
