--- a/cv-website/src/css/HomePage.css
+++ b/cv-website/src/css/HomePage.css
@@ -1,10 +1,47 @@
 @import "tailwindcss";
 
 .home-formatting-div {
-    background: radial-gradient(600px at 1187px 527px, rgba(29, 78, 216, 0.15), transparent 80%);
+    /* background: radial-gradient(600px at 1187px 527px, rgba(29, 78, 216, 0.15), transparent 80%); */
+} /* FIXME: doesn't cover whole page, only one corner. dones't interact with cursor. Fix or eliminate */
+
+.list-link {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
 }
 
 .columnar-formatting {
     padding-left: 3rem;
     padding-right: 3rem;
+}
+
+.resume-skill-list-item {
+    margin-right: 0.375rem;
+}
+
+.experience-list-item {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.social-media-icon {
+    margin-right: 1rem;
+}
+
+a {
+  font-weight: 500;
+  color: #f66f51;
+  text-decoration: inherit;
+}
+a:hover {
+  color: #f6b095;
+}
+
+.header-text {
+    font-weight: 500;
+    color: #f66f51;
+    text-decoration: inherit;
+}
+
+.header-text:hover {
+    color: #f6b095;
 }
