add contact form to graphic design page

--- a/cv-website/src/css/GraphicDesignPage.css
+++ b/cv-website/src/css/GraphicDesignPage.css
@@ -30,3 +30,8 @@
 .graphic-design-page-carousel img:hover {
     transform: scale(1.05);
 }
+
+.graphic-design-page-form-container {
+    display: flex;
+    justify-content: center;
+}
